<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.wisdom.cww.activities.SignUpActivity"
    tools:showIn="@layout/activity_sign_up">

    <EditText
        android:id="@+id/accountString"
        android:focusable="false"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="150dp"
        android:background="@null"
        android:ems="3"
        android:inputType="textPersonName"
        android:text="@string/user_account_input"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/pwdString"
        android:focusable="false"
        android:background="@null"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="16dp"
        android:ems="3"
        android:inputType="textPersonName"
        android:text="@string/user_pwd_input"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountString"/>

    <EditText
        android:id="@+id/accountInput"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="11dp"
        android:ems="8"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintLeft_toRightOf="@+id/accountString"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="150dp"/>

    <EditText
        android:id="@+id/pwdInput"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginLeft="11dp"
        android:ems="8"
        android:inputType="textPassword"
        app:layout_constraintLeft_toRightOf="@+id/pwdString"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/accountInput"/>

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_sign_up_btn"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/pwdInput"
        android:layout_marginLeft="80dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/signInBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_sign_in_btn"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/pwdInput"
        android:layout_marginRight="70dp"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/checkBtn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="150dp"
        android:text="@string/check_btn"
        app:layout_constraintLeft_toRightOf="@+id/accountInput"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</android.support.constraint.ConstraintLayout>
