<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.wisdom.cww.activities.AccountActivity"
    tools:showIn="@layout/activity_account">


    <ImageButton
        android:id="@+id/Avatar"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:elevation="2dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_account_circle_black_24dp"/>

    <EditText
        android:id="@+id/nickName"
        android:focusable="false"
        android:background="@null"
        android:layout_width="256dp"
        android:layout_height="64dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/no_log_in"
        app:layout_constraintLeft_toRightOf="@+id/Avatar"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"/>

    <ImageButton
        android:id="@+id/searchBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@mipmap/ic_explore_black_24dp" />

    <ImageButton
        android:id="@+id/pubBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@mipmap/ic_pan_tool_black_24dp"/>

    <ImageButton
        android:id="@+id/accountBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@mipmap/ic_account_circle_black_24dp" />

    <EditText
        android:id="@+id/editText2"
        android:focusable="false"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="88dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/my_follow_question"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nickName"/>

    <EditText
        android:id="@+id/editText3"
        android:focusable="false"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="88dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:ems="10"
        android:inputType="textShortMessage"
        android:text="@string/my_follow_answer"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"/>


</android.support.constraint.ConstraintLayout>
